[package]
name = "jez"
version = "0.6.0"
authors = ["Dave Poulter <hello@davepoulter.net>"]

[[bin]]
name = "jez"
required-features = ["binary"]

[lib]
name = "jez"
crate-type = ["lib"]

[dependencies]
byteorder = "1.2.1"
docopt = { version = "0.8", optional = true }
portmidi = { version = "0.2.4", optional = true }
rand = "0.4.2"
rosc = "0.1.5"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
ws = { version = "0.7.3", optional = true }

[features]
binary = ["docopt"]
with-portmidi = ["portmidi"]
with-websocket = ["ws"]
