[package]
name = "jez"
version = "0.6.0"
authors = ["Dave Poulter <hello@davepoulter.net>"]
edition = "2018"

[[bin]]
name = "jez"
required-features = ["binary"]

[lib]
name = "jez"
crate-type = ["lib"]

[dependencies]
byteorder = "1.2.1"
docopt = { version = "1.1.0", optional = true }
portmidi = { version = "0.2.4", optional = true }
rand = "0.4.2"
rosc = "0.3.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
ws = { version = "0.9.1", optional = true }

[features]
binary = ["docopt"]
with-portmidi = ["portmidi"]
with-websocket = ["ws"]
